# HomemadeSnake

./: CMakeLists.txt  README.md
doc/: Snake.md
src/: CMakeLists.txt  aux_states.cpp  aux_states.h  game.cpp  game.h  game_state.h  main.cpp  playing_state.cpp  playing_state.h  snake.cpp  snake.h  world.cpp  world.h
